--- a/test2.html
+++ b/test2.html
@@ -685,7 +685,7 @@
                             <a href="about.html" class="nav-link">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://my-smcs.com/login" class="nav-link">Permits</a>
+                            <a href="#" class="nav-link">Permits</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Accreditation</a>
@@ -701,6 +701,9 @@
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://my-smcs.com/login" class="nav-link">Customer Service</a>
                         </li>
                     </ul>
                 </div>
